@@ -36,3 +36,5 @@ endfunction(add_python_test)
 
 add_python_test(nbins_test          nbins_test.py)
 add_python_test(oor_bin_copies_test oor_bin_copies_test.py)
+add_python_test(project_method_test project_method_test.py)
+add_python_test(tuple_fill_test     tuple_fill_test.py)
